db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/bulletinnet: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: GET_HOST_FROM
              value: dns
            - name: POSTGRES_DB
              value: dev
            - name: POSTGRES_PASSWORD
              value: mysecretpassword
            - name: POSTGRES_USER
              value: postgres-dev
          image: postgres
          name: bulletindb
          ports:
            - containerPort: 5432
          resources: {}
      hostname: db
      restartPolicy: Always
status: {}
